--- a/components/Login/Login.module.css
+++ b/components/Login/Login.module.css
@@ -1,23 +1,24 @@
-.login_container{
-    width:360px;
+.login_container {
+    width: 360px;
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
     text-align: center;
-    border: 1px solid  var(--border-color);
+    border: 1px solid var(--border-color);
     text-align: center;
     font-size: 14px;
-    padding: 20px ;
-    
+    padding: 20px;
+
 }
 
-.login_container>div{
+.login_container>div {
     width: 258px;
     text-align: center;
 
 }
-.box{
+
+.box {
     display: flex;
     justify-content: space-around;
     flex-direction: row;
@@ -25,56 +26,59 @@
 
 }
 
-.line{
-    width:100px;
-    padding:2px 0px;
+.line {
+    width: 100px;
+    padding: 2px 0px;
     margin-top: 7px;
 }
-.line hr{
 
-    border: 1px solid  var(--border-color);
+.line hr {
+
+    border: 1px solid var(--border-color);
 }
 
-.login_form input{
-    width:100%;
+.login_form input {
+    width: 100%;
     margin: 3px auto;
     padding: 8px 5px;
-    border: 1px solid  var(--border-color);
-    font-size:12px;
+    border: 1px solid var(--border-color);
+    font-size: 12px;
 }
 
-.loginButton{
-    background-color: #65b6fa;
-    color: #FFF;
-    width:100%;
+.loginButton {
+    background-color: var(--secondary-color);
+    color: var(--fornt-color2);
+    width: 100%;
     padding: 10px;
     border: 1px solid;
     border-radius: 15px;
     margin: 20px auto;
 
 }
-.facebook img{
+
+.facebook img {
     margin-right: 10px;
 }
-.facebook{
-    width:100%;
+
+.facebook {
+    width: 100%;
     margin-bottom: 10px;
     font-size: 14px;
-    color:#385185;
+    color: var(--fornt-color3);
     font-weight: bold;
-    padding-top: 0px;   
+    padding-top: 0px;
     vertical-align: top;
 }
 
-.forgot_password{
-    width:100%;
+.forgot_password {
+    width: 100%;
     font-size: 12px;
-    color:#385185;
+    color: var(--fornt-color3);
 }
 
 
-@media (max-width:450px){
+@media (max-width:450px) {
     .login_container {
-       border: none;
+        border: none;
     }
 }
